--- a/StartupManager/StartupManager.entitlements
+++ b/StartupManager/StartupManager.entitlements
@@ -22,5 +22,9 @@
 	<!-- Allow scripting to run launchctl -->
 	<key>com.apple.security.temporary-exception.apple-events</key>
 	<true/>
+
+	<!-- Allow AppleScript automation -->
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 </dict>
 </plist>
